--- a/makefile.conf
+++ b/makefile.conf
@@ -19,22 +19,24 @@ INSTALL	 = $(HOME)
 SHARED	= false
 
 ##############################################################################
-# XMLADA optional, needed if you want to build SOAP's AWS support. Uncomment
-# line above to activate XML/Ada support, you must also set ADA_PROJECT_PATH
+# XMLADA optional, needed if you want to build SOAP's AWS support. Set XMLADA
+# to true to activate XML/Ada support, you must also set ADA_PROJECT_PATH
 # to point to the XML/Ada project files if not installed in the standard
 # location.
+# XMLADA = [true/false]
 #
-#XMLADA	= true
+XMLADA	= false
 
 ##############################################################################
 # ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
-# used to create a WSDL document from an Ada spec. Uncomment line above to
+# used to create a WSDL document from an Ada spec. Set ASIS to true to
 # activate ASIS support. You must also set ADA_PROJECT_PATH to point to the
 # ASIS project files if not installed in the standard location.
 #
 # If you activate ASIS you also need to activate XMLADA above.
+# ASIS = [true/false]
 #
-#ASIS	= true
+ASIS	= false
 
 ##############################################################################
 # Adasockets, optional. AWS use GNAT.Sockets as the default socket package. If
@@ -120,4 +122,13 @@ ifeq ($(UNAME), SunOS)
 DIFF	=	diff -w
 else
 DIFF	=	diff -w -c
+endif
+
+# Consistency check
+
+ifeq ($(ASIS), true)
+ifeq ($(XMLADA), false)
+$(error ASIS is set and requires XMLADA to be installed. \
+	You may be missing XMLADA=true)
+endif
 endif
