--- a/config/makefile
+++ b/config/makefile
@@ -12,8 +12,7 @@ SDIR = ../.build/setup
 setup_dir:
 	-$(MKDIR) -p $(SDIR)/obj
 
-setup: setup_dir ../src/aws-translator-conversion.adb \
-	../src/aws-os_lib-definitions.ads
+setup: setup_dir ../src/aws-translator-conversion.adb ../src/aws-os_lib.ads
 
 ../src/aws-translator-conversion.adb: makefile
 	echo Setup conversion support
@@ -21,7 +20,7 @@ setup: setup_dir ../src/aws-translator-conversion.adb \
 	$(SDIR)/test_uconv
 	$(MV) aws-translator-conversion.adb ../src
 
-../src/aws-os_lib-definitions.ads: makefile src/check_config.c
+../src/aws-os_lib.ads: makefile src/check_config.c
 	echo Setup OS specific definitions
 	$(GCC_FOR_HOST) -o $(SDIR)/check_config src/check_config.c
 	$(SDIR)/check_config ../src/aws-os_lib.ads
