Make upload2 and upload3 tests groupable. Remove lines from makefile.lst.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -50,7 +50,7 @@ endif
 
 OTH_TESTS      = tres
 
-ALONE_TESTS    = upload2 upload3 server_config tlog
+ALONE_TESTS    = server_config tlog
 
 ifeq (${XMLADA}, true)
 ifneq (${SOCKET}, std)
