* aws.texi.tmplt: * gen_doc.sed: * makefile: * readme.txt: * pipe_stream.adb: * pipe_stream.out: * aws-resources-streams-pipe.adb: * aws-resources-streams-pipe.ads: * aws.ads: Implements a new stream for reading via a pipe. Update documentation accordingly. Advance AWS to version 2.4.0w. Work for G117-010.

--- a/docs/makefile
+++ b/docs/makefile
@@ -1,7 +1,6 @@
 
 .SILENT:
 
-
 BUILD_DOC_SCRIPT = true
 
 MAKEINFO	= $(shell which makeinfo 2> /dev/null)
@@ -50,6 +49,7 @@ APIFILES = ../src/aws.ads.texi \
 	../src/aws-resources-streams-disk-once.ads.texi \
 	../src/aws-resources-streams-memory.ads.texi \
 	../src/aws-resources-streams-memory-zlib.ads.texi \
+	../src/aws-resources-streams-pipe.ads.texi \
 	../src/aws-resources.ads.texi \
 	../src/aws-response.ads.texi \
 	../src/aws-server-hotplug.ads.texi \
