--- a/makefile.conf
+++ b/makefile.conf
@@ -102,6 +102,7 @@ CP	 	  = cp -p
 DLLTOOL	 	  = dlltool
 GCC               = gcc
 GCC_FOR_HOST      = gcc
+GNAT		  = gnat
 GNATMAKE	  = gnatmake
 GNATCLEAN	  = gnatclean
 GNATMAKE_FOR_HOST = gnatmake
