* aws.ads: (HTTP_10): Moved here for consistency.
* makefile:
(check): Output expected violations.

* tools.gpr:
(Locally_Removed_Files): List files that should not be present when
 XML/Ada or ASIS support not activated. These files must not be
 checked by gnatcheck.

Clean sources to pass the current gnat check rules.
A limited number of rules are activated at the moment.
Other rules will be activated at some point.

--- a/src/makefile
+++ b/src/makefile
@@ -21,6 +21,9 @@ clean:
 	-$(RM) -f aws-translator-conversion.adb aws-os_lib-definitions.ads
 
 check:
+	echo Rule \"raised exception is not declared...\"
+	echo "   Expected 3 violations in aws-server-hotplug.adb"
+	echo "   Expected 3 violations in aws-server.adb"
 	$(GNAT) check -rules -from=../aws.checks \
 		-Psrc -XBuild=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA} \
 		-XSOCKLIB=${PRJ_SOCKLIB}
