Many clean-up in the build procedure: - Default values for SOCKET and LDAP are now identical on Windows and UNIX.   Both are disabled now. - Remove all references to POSIX for AWS.OS_Lib implementation as this   has been removed since some time. - Use only the GNAT driver instead of gnatmake, gnatclean... This is   cleaner and easier to maintain. Only GNAT is set in makefile.conf. - INSTALL variable is now set by default to the compiler on the PATH.   So there is no need to change INSTALL when installing in the default   location (GNAT root). - Add header to all makefiles. - Add checks for INSTALL variable. The compiler must be found in the PATH   and we make sure it is not empty.

--- a/makefile.conf
+++ b/makefile.conf
@@ -10,13 +10,13 @@
 # AWS will be installed under $(INSTALL). Update this variable to point to
 # the install directory. You probably want to set this to the GNAT root
 # directory to have AWS project files automatically available.
-INSTALL	 = $(HOME)
+INSTALL	 = $(dir $(shell which gnatls))..
 
 ##############################################################################
 # Set to true if AWS must be built as a shared library. If SHARED is set to
 # false AWS is built as a static library.
 #
-SHARED	= false
+SHARED	= true
 
 ##############################################################################
 # XMLADA optional, needed if you want to build SOAP's AWS support. Set XMLADA
@@ -52,12 +52,6 @@ ASIS	= false
 #IPv6 = true
 
 ##############################################################################
-# POSIX optional, needed if you want to build AWS using the POSIX version of
-# AWS.OS_Lib.
-#
-#POSIX	 = /opt/POSIX
-
-##############################################################################
 # AWS supports SSL (Secure Socket Layer). The SSL support is always built-in
 # AWS. To build AWS's demos will SSL support you need to set SOCKET to ssl, in
 # this case you must have installed OpenSSL on you computer. OpenSSL libraries
@@ -65,22 +59,14 @@ ASIS	= false
 # on this platform. (note that below ssl and openssl are aliases).
 # SOCKET = [std/ssl/openssl/gnutls]
 #
-ifeq (${OS}, Windows_NT)
-SOCKET=ssl
-else
 SOCKET=std
-endif
 
 ##############################################################################
 # AWS provides a binding to the LDAP API. This binding will use the standard
 # LDAP DLL provided with Windows OS. On GNU/Linux you need to install OpenLDAP
 # if it is not already installed. If LDAP is installed on your system you can
 # set LDAP=1 below.
-ifeq (${OS}, Windows_NT)
-LDAP=1
-else
 LDAP=0
-endif
 
 ##############################################################################
 # To activate the debug mode just uncomment the variable below. This will
@@ -95,6 +81,7 @@ endif
 
 ##############################################################################
 # Tools used by AWS
+#
 AR 		  = ar
 AWK               = awk
 CHMOD	 	  = chmod
@@ -103,9 +90,7 @@ DLLTOOL	 	  = dlltool
 GCC               = gcc
 GCC_FOR_HOST      = gcc
 GNAT		  = gnat
-GNATMAKE	  = gnatmake
-GNATCLEAN	  = gnatclean
-GNATMAKE_FOR_HOST = gnatmake
+GNAT_FOR_HOST	  = gnat
 GREP		  = grep
 GZIP	 	  = gzip
 MKDIR	 	  = mkdir -p
@@ -125,11 +110,21 @@ else
 DIFF	=	diff -w -c
 endif
 
+##############################################################################
 # Consistency check
 
 ifeq ($(ASIS), true)
 ifeq ($(XMLADA), false)
 $(error ASIS is set and requires XMLADA to be installed. \
 	You may be missing XMLADA=true)
+endif
+endif
+
+ifeq ("$(INSTALL)", "..")
+$(error "Wrong install path : INSTALL='$(INSTALL)', \
+  Check that GNAT is in the PATH")
+else
+ifeq ("$(INSTALL)", "")
+$(error "Wrong install path : empty INSTALL variable")
 endif
 endif
