--- a/makefile.conf
+++ b/makefile.conf
@@ -66,7 +66,8 @@ SOCKET=std
 # LDAP DLL provided with Windows OS. On GNU/Linux you need to install OpenLDAP
 # if it is not already installed. If LDAP is installed on your system you can
 # set LDAP=1 below.
-LDAP=0
+#
+LDAP	= false
 
 ##############################################################################
 # To activate the debug mode just uncomment the variable below. This will
