* makefile.conf: (DEBUG): Configuration variable values is now true/false as for  all other variables.
* makefile:
  Adjust accordingly.

* include/makefile:
  (setup): Call zlib/setup.

* include/zlib/makefile:
  Fix makefile to properly compiler the C sources with option -fPIC
  when building shared library. The shared library on Windows now
  start with the "lib" prefix to conform to new scheme introduced
  in GNAT.
--
Should fix AWS build failure on x86_64-pc-linux-gnu.

--- a/makefile.conf
+++ b/makefile.conf
@@ -65,15 +65,16 @@ SOCKET=std
 # AWS provides a binding to the LDAP API. This binding will use the standard
 # LDAP DLL provided with Windows OS. On GNU/Linux you need to install OpenLDAP
 # if it is not already installed. If LDAP is installed on your system you can
-# set LDAP=1 below.
+# set LDAP=true below.
 #
 LDAP	= false
 
 ##############################################################################
 # To activate the debug mode just uncomment the variable below. This will
 # build AWS with debug information and will output more build information.
+# DEBUG = [true/false]
 #
-#DEBUG	= 1
+#DEBUG	= true
 
 ##############################################################################
 # To run regression tests with GDB, uncomment the line below.
