(DEBUG): Explicitely set to false (this was the default value anyway). Add checks for proper settings of configuration variables when possible. This avoid passing wrong value without being noticed.

--- a/makefile.conf
+++ b/makefile.conf
@@ -74,7 +74,7 @@ LDAP	= false
 # build AWS with debug information and will output more build information.
 # DEBUG = [true/false]
 #
-#DEBUG	= true
+DEBUG	= false
 
 ##############################################################################
 # To run regression tests with GDB, uncomment the line below.
@@ -114,6 +114,36 @@ endif
 
 ##############################################################################
 # Consistency check
+
+ifneq ($(DEBUG), true)
+ifneq ($(DEBUG), false)
+$(error DEBUG variable must be set to true or false)
+endif
+endif
+
+ifneq ($(SHARED), true)
+ifneq ($(SHARED), false)
+$(error SHARED variable must be set to true or false)
+endif
+endif
+
+ifneq ($(ASIS), true)
+ifneq ($(ASIS), false)
+$(error ASIS variable must be set to true or false)
+endif
+endif
+
+ifneq ($(XMLADA), true)
+ifneq ($(XMLADA), false)
+$(error XMLADA variable must be set to true or false)
+endif
+endif
+
+ifneq ($(LDAP), true)
+ifneq ($(LDAP), false)
+$(error LDAP variable must be set to true or false)
+endif
+endif
 
 ifeq ($(ASIS), true)
 ifeq ($(XMLADA), false)
