Remove IPv6 emulation under Windows 2000 because we have GNAT sockets support.
* config/src/check_config.c:
Remove IPv6 emulation.
(ENOTCONN): New constant.

* config/aws-net-std__ipv6.adb:
(Shutdown): Do not log error on shutdown of not connected socket.
 It is not error for accepting sockets and for not connected sockets.
 
* win32/makefile:
Remove wspiapi.o dependence.

* win32/wspiapi.c, win32/wspiapi.h:
Files removed.

--- a/win32/makefile
+++ b/win32/makefile
@@ -53,7 +53,7 @@ force:
 
 build: $(BUILD)
 
-build_win32: $(ODIR)/gai_strerror.o $(ODIR)/wspiapi.o
+build_win32: $(ODIR)/gai_strerror.o
 	$(AR) cr $(LDIR)/libaws_win32.a $+
 
 $(ODIR)/%.o: %.o
