Able to use any available port by the server.
* src/aws-config.ads, src/aws-config.adb, src/aws-config-set.ads,
  src/aws-config-set.adb:
(Server_Port): Value could be zero to let OS choose any available port.

* src/aws-server.ads, src/aws-server.adb:
(Start): Port parameter could be zero.

* src/aws-server-status.ads, src/aws-server-status.adb:
(Port): New routine.

* src/aws-server-protocol_handler.adb:
Use AWS.Server.Status.Port to get the port binded.

* src/aws-net-acceptors.ads, src/aws-net-acceptors.adb:
(Listen): Port parameter could be zero.

* regtests/tres.adb:
Use zero port parameter let server to choose any available port.

* regtests/makefile:
Do not need port parameter for tres test.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -251,12 +251,12 @@ tres: force
 	$(GNAT) make -q -m -Pregtests -XTest_Mode=${TEST_MODE} \
 		-XBuild=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA} $@
 	echo -n "Running  " tres
-	./tres 1245 > tres-1.res
+	./tres > tres-1.res
 	echo "line 3, file 1" >> file1.html
 	echo "line 4, file 2" >> file2.html
 	echo "line 3, file 3" >> file3.html
 	echo ",  run it again"
-	./tres 1246 > tres-2.res
+	./tres > tres-2.res
 	cat tres-1.res tres-2.res > tres.res
 	-$(RM) tres$(EXEEXT)
 	-$(DIFF) tres.out tres.res 1>> alldifs 2>> alldifs
