Minor typo fix.

--- a/makefile.conf
+++ b/makefile.conf
@@ -5,7 +5,6 @@
 # IMPORTANT: each time you change the definitions here make sure you run
 #            $ make setup
 
-
 ##############################################################################
 # AWS will be installed under $(INSTALL). Update this variable to point to
 # the install directory. You probably want to set this to the GNAT root
@@ -113,7 +112,7 @@ DIFF	=	diff -w -c
 endif
 
 ##############################################################################
-# Consistency check
+# Consistency checks
 
 ifneq ($(DEBUG), true)
 ifneq ($(DEBUG), false)
